Update UI: add edit join link, filter nation and account number, fix some issues

--- a/Spotify/SPOTIFYServer/login/Templates/Components/Header.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Components/Header.html
@@ -44,17 +44,6 @@
           {% url 'VerificationTab' as VerificationTab %}
           <a class="nav-link {% if VerificationTab in request.get_full_path%}active{% endif %}" href="{% url 'VerificationTab' %}"><i class="fa fa-check-circle"></i> Verification Code</a>
         </li>
-        <li class="nav-item Active-nation">
-          <select class="form-select Active-nation" aria-label="Select active nation"
-                id="ActNationSel_id" name="ActNationSel_n">
-                <option value ="IN">Indian</option>
-                <option value ="TR">Turkey</option>
-                <option value ="VN">Vietnam</option>
-                <option value ="US">USA</option>
-                <option value ="JP">Japan</option>
-                <option value ="CN">China</option>
-              </select>
-        </li>
         <li class="nav-item d-block d-lg-none">
           <a class="nav-link" href="{% url 'LogoutAdmin' %}"><i class="fa-solid fa-right-from-bracket me-1"></i> Logout</a>
         </li>
@@ -64,14 +53,31 @@
     <!-- Collapsible wrapper -->
 
     <!-- Right elements -->
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center gap-3 my-2 my-lg-0">
+      <form id="nation-form" class="nav-item action-nation d-flex flex-row align-items-center gap-3" method="post">
+        <div class="loading d-none">
+          <div class="spinner-border text-light spinner-border-sm" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+        {% csrf_token %}
+        <select class="form-select active-nation" aria-label="Select active nation"
+          id="ActNationSel_id" name="ActNationSel_n">
+          <option value ="IN">Indian</option>
+          <option value ="TR">Turkey</option>
+          <option value ="VN">Vietnam</option>
+          <option value ="US">USA</option>
+          <option value ="JP">Japan</option>
+          <option value ="CN">China</option>
+        </select>
+      </form>
       <a class="btn btn-primary btn-block d-none d-lg-block" href="{% url 'LogoutAdmin' %}" role="button">
         <i class="fa-solid fa-right-from-bracket me-1"></i>
         Logout
       </a>
     </div>
     <!-- Right elements -->
-    
+    {% include 'Components/Toast.html' %}
   </div>
   <!-- Container wrapper -->
 </nav>
