--- a/Spotify/SPOTIFYServer/login/Templates/Components/Layout.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Components/Layout.html
@@ -21,6 +21,7 @@
 <script src="{% static "vendor/bootstrap-table/bootstrap-table.min.js" %}"></script>
 <script src="{% static "vendor/bootstrap-table/extensions/fixed-columns/bootstrap-table-fixed-columns.js" %}"></script>
 <script type="text/javascript" src="{% static "vendor/mdb5/js/mdb.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/header.js" %}"></script>
 {% block scripts %}{% endblock %}
 
 </body>
