--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control_proxy.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control_proxy.html
@@ -156,8 +156,9 @@
           <th width="30%">IP</th>
           <th width="20%">Proxy User</th>
           <th width="8%" data-field="nation">Proxy Password</th>
-          <th width="5%">Created Date</th>
           <th width="2%" data-field="accountNumber">Nation</th>
+          <th width="5%">Activated Date</th>
+
         </tr>
       </thead>
       <tbody>
