--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control_proxy.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control_proxy.html
@@ -88,13 +88,29 @@
   <h3 class="mb-0">Proxy Management</h3>
   <div class="toolbar w-100">
     <div class="row">
-      <div class="col-md-5 d-flex align-items-end">
+      <div class="col-md-7 d-flex align-items-end">
         <button id="btnImport" class="btn btn-primary me-3"><i class="fa-solid fa-file-import me-2"></i>Import</button>
-        <button id="btnExport" class="btn btn-primary"><i class="fa-solid fa-file-export me-2"></i>Export</button>
+        <form id="nation-form" class="nav-item action-nation d-flex flex-row align-items-center gap-3" method="post">
+          <div class="loading d-none">
+            <div class="spinner-border text-light spinner-border-sm" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+          {% csrf_token %}
+          <select class="form-select active-nation" aria-label="Select active nation"
+            id="ActNationSel_id" name="ActNationSel_n">
+            <option value ="IN" {% if ActiveNation == 'IN' %}selected{% endif %}>Indian</option>
+            <option value ="TR" {% if ActiveNation == 'TR' %}selected{% endif %}>Turkey</option>
+            <option value ="VN" {% if ActiveNation == 'VN' %}selected{% endif %}>Vietnam</option>
+            <option value ="US" {% if ActiveNation == 'US' %}selected{% endif %}>USA</option>
+            <option value ="JP" {% if ActiveNation == 'JP' %}selected{% endif %}>Japan</option>
+            <option value ="CN" {% if ActiveNation == 'CN' %}selected{% endif %}>China</option>
+          </select>
+        </form>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-5">
         <div class="row">
-          <div class="col-md-4 d-flex align-items-center">
+          <div class="col-md-6 d-flex align-items-center">
             <div class="w-100">
               <label for="nation-filter" class="form-label">Nation</label>
               <select class="form-select me-2" aria-label="Filter status"
@@ -109,22 +125,7 @@
               </select>
             </div>
           </div>
-          <div class="col-md-4 d-flex align-items-center">
-            <div class="w-100">
-              <label for="join-number-filter" class="form-label">Joined account number</label>
-              <select class="form-select me-2" aria-label="Filter status"
-                id="join-number-filter" name="join-number-filter">
-                <option value="All" selected>All</option>
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              </select>
-            </div>
-          </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div>
               <label for="search-input" class="form-label">Search</label>
               <div class="search btn-group m-0 w-100">
@@ -139,7 +140,7 @@
   <form id="tokenForm">{% csrf_token %}</form>
   <div>
     <table 
-      id="table-joinlink"
+      id="table-proxy"
       data-toggle="table" 
       class="table-light"
       data-pagination="true"
@@ -155,8 +156,8 @@
           <th width="5%">Protocol</th>
           <th width="30%">IP</th>
           <th width="20%">Proxy User</th>
-          <th width="8%" data-field="nation">Proxy Password</th>
-          <th width="2%" data-field="accountNumber">Nation</th>
+          <th width="8%">Proxy Password</th>
+          <th width="2%" data-field="nation">Nation</th>
           <th width="5%">Activated Date</th>
 
         </tr>
@@ -175,89 +176,13 @@
       </tbody>
     </table>
   </div>
-  {% include 'Components/Modal.html' with id='confirmImport' title='Import Spotify Join Link' confirmText='Import file' only %}
-  {% include 'Components/Modal.html' with id='confirmExport' title='Export Spotify Join Link' confirmText='Export data' only %}
-  {% include 'Components/Modal.html' with id='confirmDelete' title='Delete joined account confirmation' closeText='Cancel' confirmText='Delete' confirmColor='danger' only %}
-  {% include 'Components/Modal.html' with id='editJoinLink' title='Edit Spotify Join Link' confirmText='Save' closeText='Cancel' only %}
+  {% include 'Components/Modal.html' with id='confirmImport' title='Import Proxy' confirmText='Import file' only %}
   <div id="import-form-template" class="d-none">
     <form action="{% url 'UploadProxy' %}" class="p-3 py-2" id="import-form" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <div>
         <label class="form-label" for="uploadProxy-name">File import</label>
         <input type="file" class="form-control form-control-md required-field" id="uploadProxy-name" name="uploadProxy-name" />
-      </div>
-    </form>
-  </div>
-  <div id="edit-form-template" class="d-none">
-    <form action="{% url 'EditData' %}" class="p-3 py-2 edit-form needs-validation" novalidate method="post" enctype="multipart/form-data">
-      <!-- {
-        csrfmiddlewaretoken: 'Token...',
-        id: rowId,
-        email: 'email@example',
-        inviteLink: 'http://example.com',
-        address: 'address'
-      } -->
-      {% csrf_token %}
-      <input type="hidden" name="id" class="id">
-      <div class="mb-4 email">
-        <label for="email" >Email</label>
-        <input type="email" id="email" class="form-control required email" name="email" required placeholder="email@example.com"/>
-        <div class="invalid-feedback"></div>
-      </div>
-    
-      <div class="mb-4 inviteLink">
-        <label for="inviteLink" >Invite link</label>
-        <input type="url" id="inviteLink" class="form-control required inviteLink" 
-          pattern="^(http:\/\/www\.|https:\/\/www\.|http:\/\/|https:\/\/)?[a-z0-9]+[\.]spotify\.com(:[0-9]{1,5})?(\/.+)$"
-          name="inviteLink" required placeholder="https://www.spotify.com/..."/>
-        <div class="invalid-feedback"></div>
-      </div>
-  
-      <div class="mb-4 address">
-        <label for="address" >Address</label>
-        <input type="text" id="address" class="form-control required address" name="address" required placeholder="Enter address"/>
-        <div class="invalid-feedback"></div>
-      </div>
-    </form>
-  </div>
-  <div id="export-form-template" class="d-none">
-    <form action="{% url 'ExportReport' %}" class="p-3 py-2" id="export-form" method="post">
-      {% csrf_token %}
-      <div>Please choose month and year to export data:</div>
-      <div class="d-flex flex-row gap-3">
-        <div>
-          <label for="monthfilter_n" class="form-label">Month</label>
-          <select class="form-select me-2 required-field" aria-label="Filter status"
-            id="monthfilter_n" name="monthfilter_n">
-            <option value ="01">Jan</option>
-            <option value ="02">Feb</option>
-            <option value ="03">Mar</option>
-            <option value ="04">Apr</option>
-            <option value ="05">May</option>
-            <option value ="06">Jun</option>
-            <option value ="07">Jul</option>
-            <option value ="08">Aug</option>
-            <option value ="09">Sep</option>
-            <option value ="10">Oct</option>
-            <option value ="11">Nov</option>
-            <option value ="12">Sep</option>
-            <option value ="All" selected>All</option>
-          </select>
-        </div>
-        <div>
-          <label for="yearfilter_n" class="form-label">Year</label>
-          <select class="form-select me-2 required-field" aria-label="Filter status"
-            id="yearfilter_n" name="yearfilter_n">
-            <option value ="2023" selected>2023</option>
-            <option value ="2024">2024</option>
-            <option value ="2025">2025</option>
-            <option value ="2026">2026</option>
-            <option value ="2027">2027</option>
-            <option value ="2028">2028</option>
-            <option value ="2029">2029</option>
-            <option value ="2030">2030</option>
-          </select>
-        </div>
       </div>
     </form>
   </div>
@@ -271,53 +196,18 @@
     }
     $(document).ready(function() {
       // Add table filter by status
-      const $table = $('#table-joinlink');
+      const $table = $('#table-proxy');
       const handleFilter = () => {
         $table.bootstrapTable('filterBy', {
           nation: $('#nation-filter').val(),
-          accountNumber: $('#join-number-filter').val(),
         }, {
           'filterAlgorithm': (row, filters) => {
             $nation = $($.parseHTML(row.nation));
-            $accountNumber = $($.parseHTML(row.accountNumber));
-            console.log('debug', $nation, $accountNumber, filters);
-            return (filters.nation === 'All' || $nation.text() === filters.nation) 
-              && (filters.accountNumber === 'All' || $accountNumber.text() === filters.accountNumber);
+            return (filters.nation === 'All' || $nation.text() === filters.nation);
           }
         })
       }
       $('#nation-filter').change(handleFilter);
-      $('#join-number-filter').change(handleFilter);
-
-      // Handle show edit join link modal
-      const $editModal = $('#editJoinLink');
-      $editModal.find('button.confirm').click(function() {
-        $form = $editModal.find('.edit-form');
-        if ($form.isValid()) {
-          $(this).addClass('disabled');
-          $(this).html(`<div class="spinner-border text-light spinner-border-sm" role="status">
-              <span class="visually-hidden">Loading...</span>
-            </div>`);
-          $editModal.find('.edit-form').submit();
-        } else {
-          if (!$form.find('input.email').val()) {
-            $form.find('div.email .invalid-feedback').html('Email is required');
-          } else {
-            $form.find('div.email .invalid-feedback').html('Email format is invalid');
-          }
-
-          if (!$form.find('input.inviteLink').val()) {
-            $form.find('div.inviteLink .invalid-feedback').html('Invite link is required');
-          } else {
-            $form.find('div.inviteLink .invalid-feedback').html('Invite link must start with https://www.spotify.com/...');
-          }
-
-          if (!$form.find('input.address').val()) {
-            $form.find('div.address .invalid-feedback').html('Address is required');
-          }
-        }
-        $form.addClass('was-validated');
-      });
 
       // Handle show import confirm modal
       const $importModal = $('#confirmImport');
@@ -351,20 +241,9 @@
       if (submitStatus === 'Upload successfully') {
         const $toast = $('#toast-list .toast-success');
         $toast.find('.toast-title').html('Import successfully');
-        $toast.find('.toast-body').html('Import spotify join link successfully');
+        $toast.find('.toast-body').html('Import proxy successfully');
         $toast.toast('show');
       } else if (submitStatus === 'Upload failed') {
-        const $toast = $('#toast-list .toast-danger');
-        $toast.find('.toast-title').html('Import failed');
-        $toast.find('.toast-body').html(submitDetail);
-        $toast.toast('show');
-      }
-      if (submitStatus === 'Edit successfully') {
-        const $toast = $('#toast-list .toast-success');
-        $toast.find('.toast-title').html('Edit successfully');
-        $toast.find('.toast-body').html('Edit spotify join link successfully');
-        $toast.toast('show');
-      } else if (submitStatus === 'Edit failed') {
         const $toast = $('#toast-list .toast-danger');
         $toast.find('.toast-title').html('Import failed');
         $toast.find('.toast-body').html(submitDetail);
